# TOKEN-OPTIMIZER

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: __init__.py  benchmark_datasets.py  run_benchmarks.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
examples/: anthropic_example.py  any_llm_example.py  openai_example.py
scripts/: run_benchmarks.sh  run_tests.sh  setup.sh
src/middleware/: token_optimizer.py
src/optimizers/: llmlingua_compressor.py  provider_optimizations.py
src/translators/: deepl_translator.py
tests/: conftest.py
tests/benchmarks/: __init__.py  test_token_savings.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_middleware.py  test_output_stripper.py  test_prompt_compressor.py  test_translator.py
